--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,31 @@
 /*
  * Typography
  */
+@font-face {
+    font-family: "Merriweather";
+    src: url("Merriweather-Regular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 400;
+}
+@font-face {
+    font-family: "Merriweather";
+    src: url("Merriweather-Bold.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 700;
+}
+@font-face {
+    font-family: "Merriweather";
+    src: url("Merriweather-Black.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 900;
+}
 html {
     font-size: 100%;
 }
 body {
-    font-family: "Arial", sans-serif;
-    line-height: 1.5;
+    font-family: "Merriweather", sans-serif;
+    line-height: 1.618;
+    background-color: #f4f4f4;
 }
 h1,
 h2,
@@ -28,3 +47,89 @@ h6 {
 /*
  * Grid
  */
+.container {
+    max-width: 24em;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0.8rem;
+    padding-left: 0.8rem;
+}
+.container--large {
+    max-width: 38rem;
+}
+/*
+ * Card
+ */
+.card {
+    margin-top: 7.2rem;
+    padding: 2.4rem;
+    border-radius: 1.2rem;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.35);
+    letter-spacing: 0.05rem;
+}
+.card + .card {
+    margin-top: 1.6rem;
+}
+.card--greeting {
+    color: white;
+    background-color: #3c97d2;
+}
+.card--construction {
+    color: white;
+    background-color: #ec8e1f;
+}
+/*
+ * Nav
+ */
+.nav {
+    display: block;
+    padding: 0.8rem;
+}
+.nav:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+.nav-group {
+    display: block;
+    float: left;
+    margin-right: -0.8rem;
+    margin-left: -0.8rem;
+}
+.nav-group + .nav-group {
+    float: right;
+}
+.nav-item {
+    display: block;
+    float: left;
+    height: 2.4rem;
+    line-height: 2.4rem;
+    padding-right: 0.8rem;
+    padding-left: 0.8rem;
+}
+.nav-item + .nav-item {
+    margin-left: 0.8rem;
+}
+/*
+ * Button
+ */
+.btn {
+    border: 1px solid rgba(0,0,0,0.25);
+    border-radius: 0.4rem;
+}
+.btn:hover,
+.btn:focus {
+    background-color: rgba(0,0,0,0.1);
+}
+.btn:active {
+    background-color: rgba(0,0,0,0.15);
+}
+/*
+ * Utilities
+ */
+.fw7 {
+    font-weight: 700 !important;
+}
+.fw9 {
+    font-weight: 900 !important;
+}
